# databricks-sql-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: code-quality-checks.yml  publish-test.yml  publish.yml
dbsqlcli/: completer.py  completion_cache.py  completion_refresher.py  config.py  main.py  sqlexecute.py
test/: test_completer.py  test_completion_engine.py  test_completion_refresher.py  test_format_utils.py  test_parseutils.py
