[tool.poetry]
name = "databricks-sql-cli"
version = "0.3.3"
description = "A DBCLI client for Databricks SQL"
authors = ["Databricks SQL CLI Maintainers <dbsqlcli-maintainers@databricks.com>"]
packages = [{include = "dbsqlcli"}]
readme = "README.md"
license = "proprietary"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
Pygments = "^2.17.0"
prompt-toolkit = "^3.0.36"
sqlparse = "^0.5.0"
configobj = "^5.0.8"
cli-helpers = "^2.3.0"
databricks-sql-connector = {version = "^4.2.5", extras = ["pyarrow"]}
click = "^8.1.2"
pandas = "^2.2.0"
numpy = "^2.0.0"

[tool.poetry.scripts]
dbsqlcli = "dbsqlcli.main:cli"
databricks-sql-cli = "dbsqlcli.main:cli"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
